// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/spin/demo/basic.md extend context correctly 1`] = `
<div
  class="ant-spin ant-spin-spinning"
>
  <span
    aria-label="loading"
    class="anticon anticon-loading anticon-spin ant-spin-dot"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="loading"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
    >
      <path
        d="M19.02.8a15.4 15.4 0 017.94 4.24A15.45 15.45 0 0131.5 16a15.45 15.45 0 01-12.48 15.2 1.5 1.5 0 01-.58-2.94 12.39 12.39 0 006.4-3.42A12.45 12.45 0 0028.5 16 12.45 12.45 0 0018.44 3.74a1.5 1.5 0 01.38-2.97l.2.02z"
      />
    </svg>
  </span>
</div>
`;

exports[`renders ./components/spin/demo/custom-indicator.md extend context correctly 1`] = `
<div
  class="ant-spin ant-spin-spinning"
>
  <span
    aria-label="loading"
    class="anticon anticon-loading anticon-spin ant-spin-dot"
    role="img"
    style="font-size:24px"
  >
    <svg
      aria-hidden="true"
      data-icon="loading"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
      />
    </svg>
  </span>
</div>
`;

exports[`renders ./components/spin/demo/delayAndDebounce.md extend context correctly 1`] = `
<div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon"
        data-show="true"
        role="alert"
      >
        <div
          class="ant-alert-content"
        >
          <div
            class="ant-alert-message"
          >
            Alert message title
          </div>
          <div
            class="ant-alert-description"
          >
            Further details about the context of this alert.
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    Loading state：
    <button
      aria-checked="false"
      class="ant-switch"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/inside.md extend context correctly 1`] = `
<div
  class="example"
>
  <div
    class="ant-spin ant-spin-spinning"
  >
    <span
      aria-label="loading"
      class="anticon anticon-loading anticon-spin ant-spin-dot"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="loading"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M19.02.8a15.4 15.4 0 017.94 4.24A15.45 15.45 0 0131.5 16a15.45 15.45 0 01-12.48 15.2 1.5 1.5 0 01-.58-2.94 12.39 12.39 0 006.4-3.42A12.45 12.45 0 0028.5 16 12.45 12.45 0 0018.44 3.74a1.5 1.5 0 01.38-2.97l.2.02z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/nested.md extend context correctly 1`] = `
<div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon"
        data-show="true"
        role="alert"
      >
        <div
          class="ant-alert-content"
        >
          <div
            class="ant-alert-message"
          >
            Alert message title
          </div>
          <div
            class="ant-alert-description"
          >
            Further details about the context of this alert.
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    Loading state：
    <button
      aria-checked="false"
      class="ant-switch"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/size.md extend context correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ant-space-item"
    style="margin-right:16px"
  >
    <div
      class="ant-spin ant-spin-sm ant-spin-spinning"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin ant-spin-dot"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M19.02.8a15.4 15.4 0 017.94 4.24A15.45 15.45 0 0131.5 16a15.45 15.45 0 01-12.48 15.2 1.5 1.5 0 01-.58-2.94 12.39 12.39 0 006.4-3.42A12.45 12.45 0 0028.5 16 12.45 12.45 0 0018.44 3.74a1.5 1.5 0 01.38-2.97l.2.02z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-right:16px"
  >
    <div
      class="ant-spin ant-spin-spinning"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin ant-spin-dot"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M19.02.8a15.4 15.4 0 017.94 4.24A15.45 15.45 0 0131.5 16a15.45 15.45 0 01-12.48 15.2 1.5 1.5 0 01-.58-2.94 12.39 12.39 0 006.4-3.42A12.45 12.45 0 0028.5 16 12.45 12.45 0 0018.44 3.74a1.5 1.5 0 01.38-2.97l.2.02z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-spin ant-spin-lg ant-spin-spinning"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin ant-spin-dot"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M19.02.8a15.4 15.4 0 017.94 4.24A15.45 15.45 0 0131.5 16a15.45 15.45 0 01-12.48 15.2 1.5 1.5 0 01-.58-2.94 12.39 12.39 0 006.4-3.42A12.45 12.45 0 0028.5 16 12.45 12.45 0 0018.44 3.74a1.5 1.5 0 01.38-2.97l.2.02z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/tip.md extend context correctly 1`] = `
<div
  class="ant-spin-nested-loading"
>
  <div>
    <div
      class="ant-spin ant-spin-spinning ant-spin-show-text"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin ant-spin-dot"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M19.02.8a15.4 15.4 0 017.94 4.24A15.45 15.45 0 0131.5 16a15.45 15.45 0 01-12.48 15.2 1.5 1.5 0 01-.58-2.94 12.39 12.39 0 006.4-3.42A12.45 12.45 0 0028.5 16 12.45 12.45 0 0018.44 3.74a1.5 1.5 0 01.38-2.97l.2.02z"
          />
        </svg>
      </span>
      <div
        class="ant-spin-text"
      >
        Loading...
      </div>
    </div>
  </div>
  <div
    class="ant-spin-container ant-spin-blur"
  >
    <div
      class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon"
      data-show="true"
      role="alert"
    >
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          Alert message title
        </div>
        <div
          class="ant-alert-description"
        >
          Further details about the context of this alert.
        </div>
      </div>
    </div>
  </div>
</div>
`;
